--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -114,6 +114,8 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:layout_marginBottom="10dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginEnd="1dp"
             android:gravity="center"
             android:orientation="horizontal">
 
