--- a/app/src/main/res/layout/village_item.xml
+++ b/app/src/main/res/layout/village_item.xml
@@ -1,55 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:padding="10dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_marginBottom="10dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <android.support.v7.widget.CardView
-        app:cardCornerRadius="8dp"
-        android:elevation="10dp"
         style="@style/CardStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:elevation="10dp"
+        app:cardCornerRadius="8dp">
 
         <LinearLayout
-            android:padding="10dp"
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <TextView
                 android:id="@+id/tName"
+                style="?android:attr/textAppearanceLarge"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
                 android:text="name"
-                android:textSize="20dp"
                 android:textColor="#000"
-                android:layout_marginBottom="5dp"
-                style="?android:attr/textAppearanceLarge"
+                android:textSize="25sp" />
+
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="1dp"
+                
+                android:background="#dedede"
+                android:layout_marginBottom="10dp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textPhone"
+                    android:layout_width="wrap_content"
+                    android:layout_marginEnd="7dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:text="phone"
+                    android:textColor="#000"
+                    android:textSize="17sp" />
+
+                <TextView
+                    android:id="@+id/textTaluka"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:text="taluka"
+                    android:textColor="#000"
+                    android:textSize="17sp" />
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/textPhone"
-                android:text="cost"
-                android:textSize="20dp"
-                android:textColor="#000"
-                android:layout_marginBottom="5dp"
-                style="?android:attr/textAppearanceLarge"
+                android:id="@+id/textPoints"
+                android:text="Points"
+                android:textStyle="bold|italic"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textSize="23sp"/>
 
-            <TextView
-                android:id="@+id/textTaluka"
-                android:text="desc"
-                android:textSize="20dp"
-                android:textColor="#000"
-                android:layout_marginBottom="5dp"
-                style="?android:attr/textAppearanceLarge"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
