--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,7 +36,7 @@
             android:inputType="textEmailAddress"
             android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:hint="Enter email"
+            android:hint="@string/sign_in_with_email"
             android:padding="15dp"/>
     </android.support.design.widget.TextInputLayout>
 
@@ -53,14 +53,14 @@
             android:inputType="textPassword"
             android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:hint="Enter password"
+            android:hint="@string/password_hint"
             android:padding="15dp"/>
     </android.support.design.widget.TextInputLayout>
 
     <Button
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="@string/login_button"
         android:background="@color/colorPrimary"
         android:textColor="#fff"
         android:id="@+id/loginButton"/>
